@@ -1,5 +1,12 @@
 2008-11-21  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* international/quail.el (quail-indent-to): New function.
+	(quail-completion-1, quail-completion-list-translations)
+	(quail-insert-decode-map): Use it to improve alignment.
+	(quail-build-decode-map): Don't ignore latin-1 chars.
+	(quail-help): Increase the max decode-map size so that even the TeX map
+	gets printed.
+
 	* bookmark.el (bookmark-get-bookmark): Add `noerror' arg.
 	Signal error for invalid bookmark.
 	(bookmark-get-bookmark-record): Undo last change.
